# all-logger-rust

./: .env.example  Cargo.toml  build.rs
.github/workflows/: rust.yml
protos/: logService.proto
sql/: 00-recreate-db.sql  01-create-log-table.sql  02-dummy-data.sql
src/: env_reader.rs  main.rs
src/_tests/: models_db.rs
src/log_grpc/: log.rs  mod.rs
src/models/: db.rs  log.rs  mod.rs
