[package]
name = "logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = { version = "0.15.0", features = ["clap"] }
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls"] }
prost = "0.11.8"
prost-build = "0.7.0"
tokio = { version = "1.27.0", features = ["full"] }
tonic = "0.9.2"
sqlb = "0.0.8"

[build-dependencies]
tonic-build = "0.9.2"
